ByteTest now conforms to the new Guile testing framework.